fix-deployment-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabob-rpc-api
  namespace: metabob
spec:
  template:
    spec:
      containers:
      - name: rpc-api
        image: metabobapp/metabob-rpc-api:0.16.14-scope-fix
        command: ["start_server"]
        args:
        - "start"
        - "--host"
        - "0.0.0.0"
        - "--port"
        - "8080"
