validation-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: validation-test
  namespace: metabob
spec:
  restartPolicy: Never
  containers:
  - name: test
    image: curlimages/curl:latest
    command: ["/bin/sh", "-c"]
    args:
    - |
      [...]
