dashboard-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: minibob-dashboard
  namespace: activity-system
spec:
  hosts:
  - "dashboard.minibob.local"
  gateways:
  - metabob/metabob-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: activity-dashboard.activity-system.svc.cluster.local
        port:
          number: 3000
